<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.main.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.main.MainActivity">


        <TextView
            android:id="@+id/labelNomeCliente"
            style="@style/label_titulo"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="-20dp"
            tools:text="@string/label_dado_cliente" />


        <TextView
            style="@style/label_titulo"
            android:text="@string/label_escolha_pizza" />

        <LinearLayout style="@style/container_linha">

            <CheckBox
                android:id="@+id/cbBrocolis"
                style="@style/checkbox_pizza"
                android:text="@string/opcao_brocolis" />

            <CheckBox
                android:id="@+id/cbPortuguesa"
                style="@style/checkbox_pizza"
                android:text="@string/opcao_portuguesa" />

        </LinearLayout>

        <LinearLayout style="@style/container_linha">

            <CheckBox
                android:id="@+id/cbCalabresa"
                style="@style/checkbox_pizza"
                android:text="@string/opcao_calabresa" />

            <CheckBox
                android:id="@+id/cbFrango"
                style="@style/checkbox_pizza"
                android:text="@string/opcao_frango_com_catupiry" />

        </LinearLayout>

        <TextView
            style="@style/label_titulo"
            android:text="@string/label_tamanho_da_pizza" />

        <RadioGroup style="@style/margens_laterais_mw">

            <RadioButton
                style="@style/match_wrap"
                android:text="@string/opcao_pequena" />

            <RadioButton
                style="@style/match_wrap"
                android:text="@string/opcao_media" />

            <RadioButton
                style="@style/match_wrap"
                android:text="@string/opcao_grande" />

        </RadioGroup>

        <TextView
            style="@style/label_titulo"
            android:text="@string/label_forma_de_pagamento" />

        <Spinner
            style="@style/margens_laterais_mw"
            android:entries="@array/formas_pagamento" />

        <Button
            android:id="@+id/btnCalcular"
            style="@style/margens_mw"
            android:background="@drawable/botao_personalizado"
            android:text="@string/botao_calcular_preco"
            android:textColor="@color/white" />

    </LinearLayout>
</ScrollView>