<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.login.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="181dp"
        android:layout_height="149dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/stoneoven" />

    <EditText
        style="@style/white_style"
        android:id="@+id/inputNome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/hint_informe_nome"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />


    <EditText
        style="@style/white_style"
        android:id="@+id/inputTelefone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/hint_informe_telefone"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="@+id/inputNome"
        app:layout_constraintStart_toStartOf="@+id/inputNome"
        app:layout_constraintTop_toBottomOf="@+id/inputNome" />

    <Button
        android:id="@+id/btnIniciar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:background="@color/white"
        android:text="@string/label_iniciar"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="@+id/inputTelefone"
        app:layout_constraintStart_toStartOf="@+id/inputTelefone"
        app:layout_constraintTop_toBottomOf="@+id/inputTelefone" />

</android.support.constraint.ConstraintLayout>